syntax = "proto2";

package Zko;

enum ZkRefType {
  MESH = 0;
  TEXTURE = 2;
  MATERIAL = 3;
}

message ZkReference {
  required string refId = 1;
  required ZkRefType type = 2;

  optional ZkMesh mesh = 10;
  optional ZkTexture texture = 11;
  optional ZkMaterial material = 12;
}

message ZkComponentCollection {
  repeated ZkMesh meshes = 1;
  repeated ZkTexture textures = 2;
}