syntax = "proto2";

package Zko;

import "./group.proto";
import "./scene.proto";
import "./model.proto";
import "./camera.proto";
import "./skeleton.proto";

message ZkoObjectProto {
  required string type = 1;
  required string refId = 2;

  optional ZkScene scene = 100;
  optional ZkGroup group = 101;
  optional ZkModel model = 102;
  optional ZkCamera camera = 103;
  optional ZkSkeleton skeleton = 104;
  optional ZkJoint joint = 105;
}