syntax = "proto2";

package Zko;

import "./commons.proto";
import "./object.proto";
import "./action.proto";

message ZkoFormat {
  required ZkoHeader header = 1;
  map<string, ZkoObjectProto> objects = 3;
  required ZkoHierarchyNode hierarchy = 4;
  repeated ZkSkeletalAction actions = 5;
}

message ZkoHeader {
  required string version = 1;
}

message ZkoHierarchyNode {
  required string refId = 1;
  repeated ZkoHierarchyNode children = 100;
}
